batch execution, GPU not yet working

--- a/environment.yaml
+++ b/environment.yaml
@@ -1,5 +1,6 @@
-name: base
+name: qb
 dependencies:
+  - python=3.6
   - pytorch=0.4.1
   - numpy
   - scipy
@@ -7,7 +8,19 @@ dependencies:
   - scikit-learn
   - nltk
   - requests
-  - click
+  - click==7.0.*
   - flask
+  - ipython
+  - tensorflow==1.11.*
+  - pylint
+  - cloudpickle
+  - flask
+  - tqdm
+  - click
+  - tensorboardx
+  - pip:
+    - allennlp==0.7.*
+    - overrides
 channels:
   - pytorch
+  - conda-forge
